css style part 2

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,22 @@ h2 {
     margin-bottom: 15px;
 }
 
+:root {
+    --base: #ffc600;
+    --spacing: 10px;
+    --blur: 10px;
+}
+
+img {
+    padding: var(--spacing);
+    background: var(--base);
+    filter: blur(var(--blur));
+}
+
+.h1 {
+    color: var(--base);
+}
+
 .footer-box p {
     text-align: center;
 }
